# py-test-wrapper

./: .gitignore  MODULE.bazel
lib/: BUILD.bazel  adder_test.py
server/: BUILD.bazel  main.py
tools/runner/: BUILD.bazel  defs.bzl
